tests/paczka1/small_fuzzy/90868486.err
Error in line 13: iNW A644 22,01
Error in line 7: iNW S426 6,8
